<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/lightbitmapbg"
    android:orientation="vertical" >

    <include layout="@layout/layout_top_sliding" />

    <com.MeiHuaNet.view.SlidingLinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/listview_category_bg_color"
        android:orientation="vertical"
        android:paddingLeft="15dp" >

        <com.MeiHuaNet.view.TextViewFont
            android:id="@+id/acepack_knowledge_center"
            style="@style/acepack_textview_layout"
            android:text="@string/knowledge_center" />

        <ImageView style="@style/acepack_line" />

        <com.MeiHuaNet.view.TextViewFont
            android:id="@+id/acepack_case_center"
            style="@style/acepack_textview_layout"
            android:text="@string/case_center" />

        <ImageView style="@style/acepack_line" />

        <com.MeiHuaNet.view.TextViewFont
            android:id="@+id/acepack_marketing_info"
            style="@style/acepack_textview_layout"
            android:text="@string/marketing_info" />
    </com.MeiHuaNet.view.SlidingLinearLayout>

</LinearLayout>